--- a/TODO.txt
+++ b/TODO.txt
@@ -69,17 +69,17 @@ POJobOrder.php
 
  Departmental User UI	
 	✓ - [mica / ron]	- Profile ni departmental user 												ñ
-	 - [Bryan]			- Notification para sa pag may inassign na item	- kulang pa release wala pa kila espe.
+	✓ - [Bryan]			- Notification para sa pag may inassign na item
 	✓ - [Bryan]			- Notification para sa result ng report of damage [ALL PAGES / 2.30hrs]
 
 
-	 - [Bryan]			- DUDepartmentAsset.php
+	✓ - [Bryan]			- DUDepartmentAsset.php
 	✓ - [Bryan]			- Validation ng release [10mins]
 	✓ - [Bryan]			- Validation ng report [10mins]
-	 - [Bryan]			- Dapat di mawawala yung nirelease
-	 - [Bryan]			- Dapat di mawawala yung nireport
-	 - [Bryan]			- Dapat di pede ireport yung nirelease
-	 - [Bryan]			- Dapat di pede ireport yung nireport
+	✓ - [Bryan]			- Dapat di mawawala yung nirelease
+	✓ - [Bryan]			- Dapat di mawawala yung nireport
+	✓ - [Bryan]			- Dapat di pede ireport yung nirelease
+	✓ - [Bryan]			- Dapat di pede ireport yung nireport
 
 
 	 - [mica / ron]		- DUDashboard.php
@@ -119,34 +119,89 @@ POJobOrder.php
 
 
 
-UPDATE `ams_r_asset` SET `A_STATUS`= 'Serviceable', `A_AVAILABILITY`= 'Available', `A_DISPOSAL_STATUS`= 0
 
-ALTER TABLE `ams_t_dispose` AUTO_INCREMENT = 1
+updated
 
-ALTER TABLE `ams_t_job_order_sub` AUTO_INCREMENT = 1
+UPDATE `ams_r_asset` SET `A_STATUS`= 'Serviceable', `A_AVAILABILITY`= 'Available', `A_DISPOSAL_STATUS`= 0;
 
-ALTER TABLE `ams_t_job_order` AUTO_INCREMENT = 1
+DELETE FROM ams_t_dispose; 
 
-ALTER TABLE `ams_t_par_sub` AUTO_INCREMENT = 1
+ALTER TABLE `ams_t_dispose` AUTO_INCREMENT = 1;
 
-ALTER TABLE `ams_t_par` AUTO_INCREMENT = 1
+DELETE FROM ams_t_job_order_sub;
 
-ALTER TABLE `ams_t_release_of_asset_sub` AUTO_INCREMENT = 1
+ALTER TABLE `ams_t_job_order_sub` AUTO_INCREMENT = 1;
 
-ALTER TABLE `ams_t_release_of_asset` AUTO_INCREMENT = 1
+DELETE FROM ams_t_job_order;
 
-ALTER TABLE `ams_t_report_of_damage_sub` AUTO_INCREMENT = 1
+ALTER TABLE `ams_t_job_order` AUTO_INCREMENT = 1;
 
-ALTER TABLE `ams_t_report_of_damage` AUTO_INCREMENT = 1
+DELETE FROM ams_t_par_sub;
 
-ALTER TABLE `ams_t_transfer_out_ptr_sub` AUTO_INCREMENT = 1
+ALTER TABLE `ams_t_par_sub` AUTO_INCREMENT = 1;
 
-ALTER TABLE `ams_t_transfer_out_ptr` AUTO_INCREMENT = 1
+DELETE FROM ams_t_par;
 
-ALTER TABLE `ams_t_user_request_status_to_main` AUTO_INCREMENT = 1
+ALTER TABLE `ams_t_par` AUTO_INCREMENT = 1;
 
-ALTER TABLE `ams_t_user_request_approved_by_po` AUTO_INCREMENT = 1
+DELETE FROM ams_t_release_of_asset_sub;
 
-ALTER TABLE `ams_t_user_request` AUTO_INCREMENT = 1
+ALTER TABLE `ams_t_release_of_asset_sub` AUTO_INCREMENT = 1;
 
-ALTER TABLE `ams_t_user_request_summary` AUTO_INCREMENT = 1
+DELETE FROM ams_t_release_of_asset;
+
+ALTER TABLE `ams_t_release_of_asset` AUTO_INCREMENT = 1;
+
+DELETE FROM ams_t_report_of_damage_sub;
+
+ALTER TABLE `ams_t_report_of_damage_sub` AUTO_INCREMENT = 1;
+
+DELETE FROM ams_t_report_of_damage;
+
+ALTER TABLE `ams_t_report_of_damage` AUTO_INCREMENT = 1;
+
+DELETE FROM ams_t_transfer_out_ptr_sub;
+
+ALTER TABLE `ams_t_transfer_out_ptr_sub` AUTO_INCREMENT = 1;
+
+DELETE FROM ams_t_transfer_out_ptr;
+
+ALTER TABLE `ams_t_transfer_out_ptr` AUTO_INCREMENT = 1;
+
+DELETE FROM ams_t_user_request_status_to_main;
+
+ALTER TABLE `ams_t_user_request_status_to_main` AUTO_INCREMENT = 1;
+
+DELETE FROM ams_t_user_request_approved_by_po;
+
+ALTER TABLE `ams_t_user_request_approved_by_po` AUTO_INCREMENT = 1;
+
+DELETE FROM ams_t_user_request;
+
+ALTER TABLE `ams_t_user_request` AUTO_INCREMENT = 1;
+
+DELETE FROM ams_t_user_request_summary;
+
+ALTER TABLE `ams_t_user_request_summary` AUTO_INCREMENT = 1;
+
+
+
+
+
+RON ETO
+
+	= ETO YUNG NO NG ACQUIRED ASSETS
+
+		SELECT COUNT(*) AS NOOFACQUIREDITEMS FROM ams_t_par AS PAR INNER JOIN ams_t_par_sub AS PARS ON PARS.PAR_ID = PAR.PAR_ID INNER JOIN ams_r_asset AS A ON PARS.A_ID = A.A_ID INNER JOIN ams_r_employee_profile AS EP ON PARS.EP_ID = EP.EP_ID INNER JOIN ams_r_office AS O ON EP.O_ID = O.O_ID WHERE O.O_ID = 1 AND PARS.PARS_CANCEL = 0
+
+
+
+	= ETO YUNG NO NG RELEASED ASSETS
+
+		SELECT COUNT(*) AS NOOFRELEASEDITEMS FROM ams_t_par AS PAR INNER JOIN ams_t_par_sub AS PARS ON PARS.PAR_ID = PAR.PAR_ID INNER JOIN ams_r_asset AS A ON PARS.A_ID = A.A_ID INNER JOIN ams_r_employee_profile AS EP ON PARS.EP_ID = EP.EP_ID INNER JOIN ams_r_office AS O ON EP.O_ID = O.O_ID WHERE O.O_ID = 1 AND PARS.PARS_CANCEL = 1
+
+
+
+	= ETO YUNG TOTAL NUMBER OF ASSET IN DEPARTMENT
+
+		SELECT COUNT(*) AS TOTALOFITEMSINDEPT FROM ams_t_par AS PAR INNER JOIN ams_t_par_sub AS PARS ON PARS.PAR_ID = PAR.PAR_ID INNER JOIN ams_r_asset AS A ON PARS.A_ID = A.A_ID INNER JOIN ams_r_employee_profile AS EP ON PARS.EP_ID = EP.EP_ID INNER JOIN ams_r_office AS O ON EP.O_ID = O.O_ID WHERE O.O_ID = 1		
